# computational-math

Lab1 - Approximation of derivative/: CMakeLists.txt  README.md  main.cc
Lab1 - Approximation of derivative/include/: inputfn.hh  plot.hh
Lab1 - Approximation of derivative/src/: app.cc  approximation.cc  plot.cc
Lab2 - Solving SLAE/: CMakeLists.txt  README.md  main.cc
Lab2 - Solving SLAE/include/: app.hh  gauss.hh  jacobi.hh  lu.hh  relaxation.hh  seidel.hh  utils.hh
Lab2 - Solving SLAE/src/: app.cc
Lab3 - Solving SNAE/: CMakeLists.txt  README.md  main.cc
Lab3 - Solving SNAE/include/: app.hh  newton.hh  smi.hh  snae.hh  utils.hh
Lab3 - Solving SNAE/src/: app.cc
Lab4 - Interpolation/: CMakeLists.txt  README.md  main.cc
Lab4 - Interpolation/include/: app.hh  interp.hh  lsm.hh  newton.hh
Lab4 - Interpolation/src/: app.cc  lsm.cc  newton.cc
Lab5 - Numerical integration/: CMakeLists.txt  README.md  main.cc
Lab5 - Numerical integration/include/: app.hh  gauss.hh  integral.hh  interp.hh  spline.hh  trapezoid.hh
Lab5 - Numerical integration/src/: app.cc  integral.cc  spline.cc  trapezoid.cc
Lab6 - Solving ODE/: ode.ipynb
Lab7 - Boundary value problem/: bvl.ipynb
Lab8 - Solving PDE/: CMakeLists.txt  README.md  main.cc
Lab8 - Solving PDE/include/: drawer.hh  grid.hh  scheme.hh  solver.hh
Lab8 - Solving PDE/src/: drawer.cc  scheme.cc  solver.cc
lab1/include/: app.hh  approximation.hh
lab1/src/: app.cc
